ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-server-ingress
    namespace: argocd
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        nginx.ingress.kubernetes.io/ssl-passthrough: "true"
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: cd.splittery.de
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                number: 80
    tls:
        - hosts:
              - cd.splittery.de
          secretName: argocd-tls
